--- a/static/map.css
+++ b/static/map.css
@@ -1,5 +1,11 @@
 html { height: 100% }
-body { height: 100%; margin: 0; padding: 0 }
+body {
+	height: 100%;
+	margin: 0;
+	padding: 0;
+	font-family: Helvetica, Tahoma, Geneva, 'Arial Narrow', Arial, sans-serif;
+}
+
 #map-canvas { height: 100% }
 #search-field {
 	font-size: 23px;
