--- a/templates/map.html
+++ b/templates/map.html
@@ -4,9 +4,9 @@
 		<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 		<link rel="stylesheet" type="text/css" href="{{url_for('static', filename='map.css')}}">
 		<script type="text/javascript" src="{{url_for('static', filename='vendor/json2.js')}}"></script>
-		<script type="text/javascript" src="{{url_for('static', filename='vendor/underscore.js')}}"></script>
-		<script type="text/javascript" src="{{url_for('static', filename='vendor/jquery-1.10.2.js')}}"></script>
-		<script type="text/javascript" src="{{url_for('static', filename='vendor/backbone.js')}}"></script>
+		<script type="text/javascript" src="{{url_for('static', filename='vendor/underscore-min.js')}}"></script>
+		<script type="text/javascript" src="{{url_for('static', filename='vendor/jquery-1.10.2.min.js')}}"></script>
+		<script type="text/javascript" src="{{url_for('static', filename='vendor/backbone-min.js')}}"></script>
 		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key={{api_key}}&sensor=true&libraries=places"></script>
 		<script type="text/javascript" src="{{url_for('static', filename='map.js')}}"></script>
 	</head>
