Add a title to the template

--- a/templates/map.html
+++ b/templates/map.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<title>SF Food Trucks</title>
 		<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 		<link rel="stylesheet" type="text/css" href="{{url_for('static', filename='map.css')}}">
 		<script type="text/javascript" src="{{url_for('static', filename='vendor/json2.js')}}"></script>
